--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,9 @@ quiz.answer_num_range= \uC815\uB2F5\uC740 1\uBD80\uD130 4\uAE4C\uC9C0\uC758 \uAC
 quiz.id_required = \uD034\uC988 \uC544\uC774\uB514\uB294 \uD544\uC218\uC785\uB2C8\uB2E4.
 quiz.answer_required = \uD034\uC988 \uC815\uB2F5\uC740 \uD544\uC218\uC785\uB2C8\uB2E4.
 quiz.participantId_null = \uCC38\uAC00\uC790 \uC544\uC774\uB514\uB294 \uD544\uC218\uC785\uB2C8\uB2E4.
+quiz.description_required = \uD034\uC988 \uC124\uBA85\uC740 \uD544\uC218\uC785\uB2C8\uB2E4.
+quiz.questions_required = \uD034\uC988 \uC9C8\uBB38\uC740 \uD544\uC218\uC785\uB2C8\uB2E4.
+quiz.image_required = \uD034\uC988 \uC774\uBBF8\uC9C0\uB294 \uD544\uC218\uC785\uB2C8\uB2E4.
 
 # \uAE30\uB300\uD3C9
 comment.comment_id_required = \uAE30\uB300\uD3C9 id\uB294 \uD544\uC218\uC785\uB2C8\uB2E4.
