--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,13 @@
 # \uC751\uBAA8
 draw.prize_id_required = \uC751\uBAA8 \uB4F1\uC218\uAC00 \uBE44\uC5B4\uC788\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
 draw.prize_ranking_range = \uC751\uBAA8 \uB4F1\uC218\uB294 0\uB4F1\uBD80\uD130 5\uB4F1\uAE4C\uC9C0\uC785\uB2C8\uB2E4.
+draw.win_message_required = \uC751\uBAA8 \uC131\uACF5 \uBA54\uC2DC\uC9C0\uB294 \uD544\uC218\uC785\uB2C8\uB2E4.
+draw.lose_message_required = \uC751\uBAA8 \uC2E4\uD328 \uBA54\uC2DC\uC9C0\uB294 \uD544\uC218\uC785\uB2C8\uB2E4.
+draw.lose_scenario_required = \uC751\uBAA8 \uC2E4\uD328 \uC2DC\uB098\uB9AC\uC624\uB294 \uD544\uC218\uC785\uB2C8\uB2E4.
+draw.win_image_required = \uC751\uBAA8 \uC131\uACF5 \uC774\uBBF8\uC9C0\uB294 \uD544\uC218\uC785\uB2C8\uB2E4.
+draw.lose_image_required = \uC751\uBAA8 \uC2E4\uD328 \uC774\uBBF8\uC9C0\uB294 \uD544\uC218\uC785\uB2C8\uB2E4.
+draw.common_scenario_required = \uC751\uBAA8 \uACF5\uD1B5 \uC2DC\uB098\uB9AC\uC624\uB294 \uD544\uC218\uC785\uB2C8\uB2E4.
+draw.draw_date_required = \uC751\uBAA8 \uB0A0\uC9DC\uB294 \uD544\uC218\uC785\uB2C8\uB2E4.
 
 # \uD034\uC988
 quiz.answer_num_range= \uC815\uB2F5\uC740 1\uBD80\uD130 4\uAE4C\uC9C0\uC758 \uAC12\uB9CC \uD5C8\uC6A9\uB429\uB2C8\uB2E4.
